Fix component overflow
Sometimes components were overflowing on refresh

--- a/builder/src/styles/components.css
+++ b/builder/src/styles/components.css
@@ -69,7 +69,7 @@
   visibility: hidden;
   position: absolute;
   z-index: 1;
-  right: 0%;
+  right: 0;
   opacity: 0;
   transition: opacity 0.2s;
   background: #8247e5;
